# minecraft-command-bot

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build-image.yaml
src/: config.rs  error.rs  globals.rs  listeners.rs  main.rs  minecraft_line.rs
src/commands/: builtins.rs  cmd.rs  mcuuid.rs  mod.rs  say.rs
src/domains/: mod.rs  mojang_client.rs  ping_client.rs  rcon_client.rs
src/domains/send_rule/: advancement_rule.rs  chat_rule.rs  death_rule.rs  login_rule.rs  mod.rs  rcon_rule.rs  server_rule.rs
