[package]
name = "minecraft-command-bot"
version = "1.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcon = { version = "0.6.0", features = ["rt-tokio"] }

serenity = {version = "0.10.7", features = ["framework", "standard_framework"]}

tokio = {version = "1.18", features = ["macros", "rt-multi-thread"]}
tokio-stream = "0.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

envy = "0.4.2"
err-derive = "0.3.1"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.17"

reqwest = { version = "0.11.10", default-features = false, features = ["json"] }
url = "2.2.2"
uuid = { version = "1", features = ["serde"] }

linemux = "0.2"
regex = "1.5"
once_cell = "1"
async-minecraft-ping = "0.8"
