[package]
name = "minecraft-command-bot"
version = "1.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcon = { version = "0.6.0", features = ["rt-tokio"] }

# burst_colours の修正が取り込まれるまでの暫定対応
# https://github.com/serenity-rs/serenity/commit/e34f4491ee3a0b20ea8dc30cbc77b257f402f692
serenity = { git = "https://github.com/serenity-rs/serenity", rev = "59c24502f8b2c8381ffdefab7b5f105cf67c9c63", features = [
    "framework",
    "standard_framework",
] }
poise = { git = "https://github.com/naari3/poise", rev = "5dd484e8957ca4e655d06bccf3501e24f67407aa" }

tokio = { version = "1.18", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

envy = "0.4.2"
err-derive = "0.3.1"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.17"

reqwest = { version = "0.11.10", default-features = false, features = ["json"] }
url = "2.2.2"
uuid = { version = "1", features = ["serde"] }

linemux = "0.2"
regex = "1.5"
once_cell = "1"
async-minecraft-ping = "0.8"

# cargo-zigbuild で UnknownOperatingSystem が出る件の暫定対応
cc = "=1.0.83"
